Got it working for now