@@ -1,7 +1,7 @@
 package org.example.v2x.coordinator;
 
-import java.time.Instant;
 import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * 各リージョンに対して提供可能な車両の最新アナウンスを保持。
@@ -9,7 +9,6 @@ import java.util.*;
 public class RegionDirectory {
 
     public static class Entry {
-
         public final String vehicleId;
         public volatile long lastSeen;
 
@@ -26,18 +25,23 @@ public class RegionDirectory {
         this.ttlMillis = ttlMillis;
     }
 
+    /** リージョンと車両IDのアナウンスを登録/更新 */
     public synchronized void announce(String region, String vehicleId, long now) {
-        regionToVehicles.computeIfAbsent(region, r -> new HashMap<>())
-                .compute(vehicleId, (k, v) -> v == null ? new Entry(vehicleId, now) : (v.lastSeen = now, v)
+        Map<String, Entry> veh = regionToVehicles.computeIfAbsent(region, r -> new HashMap<>());
+        veh.compute(vehicleId, (k, v) -> {
+            if (v == null) {
+                return new Entry(vehicleId, now);
+            }
+            v.lastSeen = now;
+            return v;
+        });
+    }
 
-    
-    );
-}
-
-
-public synchronized List<String> candidates(String region, long now) {
-        Map<String, Entry> m = regionToVehicles.getOrDefault(region, Collections.emptyMap());
+    /** 有効期限内の候補車両IDを返す（古いものは掃除） */
+    public synchronized List<String> candidates(String region, long now) {
+        Map<String, Entry> m = regionToVehicles.get(region);
+        if (m == null) return Collections.emptyList();
         m.entrySet().removeIf(e -> (now - e.getValue().lastSeen) > ttlMillis);
-        return m.values().stream().map(e -> e.vehicleId).toList();
+        return m.values().stream().map(e -> e.vehicleId).collect(Collectors.toList());
     }
 }
